# RSS-CLI

./: .gitignore  README.md  config.py  env.example  feeds_example.json  main.py  pyproject.toml  requirements.txt  setup.sh
api/: rss_cli_mcp.py
cli/: __init__.py  commands.py
database/: db.py  docker-compose.yml  init.sql  models.py
llm/: chat.py  tools.py
rss/: __init__.py  feeds.py  opml_handler.py  rss_fetcher.py
